# saham-print

./: .gitignore  README.md  bunfig.toml  eslint.config.js  index.html  package.json  tailwind.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs
src/components/: AppLayout.tsx  StatusBadge.tsx
src/lib/: auth.ts  customers.ts  database.ts  services.ts  store.ts  types.ts
src/pages/: BackupPage.tsx  ChangePassword.tsx  CustomersPage.tsx  Dashboard.tsx  Debts.tsx  InvoicePage.tsx  LoginPage.tsx  OrderDetails.tsx  OrderForm.tsx  OrdersList.tsx  ReportsPage.tsx  ServicesSettings.tsx
