[package]
name = "saham-print"
version = "0.1.0"
description = "Local print shop order manager"
authors = ["Saham Print"]
edition = "2021"

[lib]
name = "saham_print_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
